syntax = "proto3";

option csharp_namespace = "gRPCclient";

package calculatePi;

service CalculatePi {
  rpc Calculate (CalculatePiRequest) returns (CalculatePiResponse);
}

message CalculatePiRequest {
  int32 digits = 1;
  double number = 2;
}

message CalculatePiResponse {
  string result = 1;
  bool isGreater = 3;
}
